@@ -4,6 +4,8 @@
 
 EVP_sha224,
 EVP_sha256,
+EVP_sha512_224,
+EVP_sha512_256,
 EVP_sha384,
 EVP_sha512
 - SHA-2 For EVP
@@ -14,6 +16,8 @@ EVP_sha512
 
  const EVP_MD *EVP_sha224(void);
  const EVP_MD *EVP_sha256(void);
+ const EVP_MD *EVP_sha512_224(void);
+ const EVP_MD *EVP_sha512_256(void);
  const EVP_MD *EVP_sha384(void);
  const EVP_MD *EVP_sha512(void);
 
@@ -26,11 +30,18 @@ standardized in NIST FIPS 180-4, first published in 2001.
 
 =item EVP_sha224(),
 EVP_sha256(),
+EVP_sha512_224,
+EVP_sha512_256,
 EVP_sha384(),
 EVP_sha512()
 
-The SHA-2 SHA-224, SHA-256, SHA-384, SHA-512 algorithms respectively, which
-generates 224, 256, 384 and 512 bits of output from a given input.
+The SHA-2 SHA-224, SHA-256, SHA-512/224, SHA512/256, SHA-384 and SHA-512
+algorithms, which generate 224, 256, 224, 256, 384 and 512 bits
+respectively of output from a given input.
+
+The two algorithms: SHA-512/224 and SHA512/256 are truncated forms of the
+SHA-512 algorithm. They are distinct from SHA-224 and SHA-256 even though
+their outputs are of the same size.
 
 =back
 
@@ -52,7 +63,7 @@ L<EVP_DigestInit(3)>
 
 =head1 COPYRIGHT
 
-Copyright 2017 The OpenSSL Project Authors. All Rights Reserved.
+Copyright 2017-2018 The OpenSSL Project Authors. All Rights Reserved.
 
 Licensed under the OpenSSL license (the "License").  You may not use
 this file except in compliance with the License.  You can obtain a copy
